--- a/_data/content.yml.save.1
+++ b/_data/content.yml.save.1
@@ -1,3 +1,4 @@
+
 google_analytics: UA-XXXXX-Y
 
 zine_link: /assets/PreserveThisPodcast_Zine_Online.pdf
@@ -17,16 +18,11 @@ episodes:
     download_link: https://audio.simplecast.com/33c29a99.mp3
     exercises_link:
     transcript_file: transcript-00prologue
-  - name: Ep1—Time to Take Notice
     embed_link: https://embed.radiopublic.com/e?if=preserve-this-podcast-GZbya9
     download_link: https://audio.simplecast.com/d2e92a88.mp3
     exercises_link: /#zine
     transcript_file: trancript01-time-to-take-notice
-  - name: Ep2—Get Organized
-    embed_link: https://embed.radiopublic.com/e?if=preserve-this-podcast-GZbya9&ge=s1!8656cc15c4c5d699b0d9e755db6853b3efa79ee2
-    download_link: https://audio.simplecast.com/c423d600.mp3
-    exercises_link: http://preservethispodcast.org/assets/PreserveThisPodcast_Zine_Online.pdf#page=7
-    transcript_file: transcript02-get-organized
+  - name: Ep2
 
 #   - name: Prepare your Files for Archiving
 #     embed_link: https://embed.radiopublic.com/e?if=SongExploder&ge=s1!ff980151529d68e71f286e7e49ce7142b9d23bad
