add ep4 embed link

--- a/_data/content.yml.save.1
+++ b/_data/content.yml.save.1
@@ -1,4 +1,3 @@
-
 google_analytics: UA-XXXXX-Y
 
 zine_link: /assets/PreserveThisPodcast_Zine_Online.pdf
@@ -28,16 +27,16 @@ episodes:
     download_link: https://audio.simplecast.com/c423d600.mp3
     exercises_link: http://preservethispodcast.org/assets/PreserveThisPodcast_Zine_Online.pdf#page=5
     transcript_file: transcript02-get-organized
-  - name: Ep3—Back it up
+  - name: Ep3——Back it up
     embed_link: https://embed.radiopublic.com/e?if=preserve-this-podcast-GZbya9&ge=s1!d102a0be8c47c1fc7041b433620c3c83ab2592fe
     download_link: https://audio.simplecast.com/ef4681be.mp3
     exercises_link: http://preservethispodcast.org/assets/PreserveThisPodcast_Zine_Online.pdf#page=10
     transcript_file: transcript03-back-it-up
-  - name: Ep4—Metadata Meta-awareness
-    embed_link:"https://embed.radiopublic.com/e?if=preserve-this-podcast-WDJY3A&ge=s1!b3335c5c7b8a03c28400e85d7c610d97f95aa856" 
-    download_link: https://audio.simplecast.com/71a35e18.mp3
+  - name: Ep4Metadata Mysteries
+    embed_link: 
+    download_link: 
     exercises_link: http://preservethispodcast.org/assets/PreserveThisPodcast_Zine_Online.pdf#page=12
-    transcript_file: transcript04-metadata-meta-awareness
+    transcript_file: transcript04-metadata-mysteries
 
 #   - name: Prepare your Files for Archiving
 #     embed_link: https://embed.radiopublic.com/e?if=SongExploder&ge=s1!ff980151529d68e71f286e7e49ce7142b9d23bad
